# media-kit

libs/windows/media_kit_libs_windows_video/: README.md
libs/windows/media_kit_libs_windows_video/scripts/: download_vendor.ps1
libs/windows/media_kit_libs_windows_video/windows/: CMakeLists.txt
video_player_media_kit/example/: pubspec.yaml
